  - Monika refactoring and now in the oar packaging.
  - Added a table schema in the db with the field version, reprensenting the 
    version of the db schema.
  - Added a field DB_PORT in the oar config file. 
  - Bug #5518: add right initialization of the job user name.
  - Add new oaradmin command. This will permit to create resources and 
    manage admission rules more easily.

version 2.2.12:
---------------
  - Bug #5239: fix the bug if there are spaces into job name or project
  - Fix the bug in Iolib if DEAD_SWITCH_TIME >0
  - Fix a bug in bipbip when calling the cpuset_manager to clean jobs in error
  - Bug #5469: fix the bug with reservations and Dead resources
  - Bug #5535: checks for reservations made at a same time was wrong.
  - New feature: local checks on nodes can be plugged in the oarnodecheck
    mechanism. Results can be asynchronously checked from the server (taktuk
    ping checker)
  - Add 2 new tables to keep track of the scheduling decisions
    (gantt_jobs_predictions_log and gantt_jobs_resources_log). This will help
    debugging scheduling troubles (see SCHEDULER_LOG_DECISIONS in oar.conf)
  - Now reservations are scheduled only once (at submission time). Resources
    allocated to a reservations are definitively set once the validated is
    done and won't change in next scheduler's pass.
  - Fix DrawGantt to not display besteffort jobs in the future which is
    meaningless. 

version 2.2.11:
---------------

  - Fix Debian package dependency on a CGI web server.
  - Fix little bug: remove notification (scheduled start time) for Interactive
    reservation.
  - Fix bug in reservation: take care of the SCHEDULER_JOB_SECURITY_TIME for
    reservations to check.
  - Fix bug: add a lock around the section which creates and feed the OAR
    cpuset.
  - Taktuk command line API has changed (we need taktuk >= 3.6).
  - Fix extra ' in the name of output files when using a job name.