@@ -906,7 +906,7 @@ sub get_possible_wanted_resources($$$$$$$){
     my $order_part = shift;
 
     my $sql_in_string = "\'1\'";
-    if (defined($resources_to_ignore_array) and ($#{@{$resources_to_ignore_array}} >= 0)){
+    if (defined($resources_to_ignore_array) and ($#{$resources_to_ignore_array} >= 0)){
         $sql_in_string = "resource_id NOT IN (";
         $sql_in_string .= join(",",@{$resources_to_ignore_array});
         $sql_in_string .= ")";
@@ -4741,7 +4741,7 @@ sub register_monitoring_values($$$$){
     if (! insert_monitoring_row($dbh,$table,$fields,$values)){
         my $create_str;
         $create_str = "CREATE TABLE monitoring_$table (";
-        for (my $i=0; $i <= $#{@{$fields}}; $i++){
+        for (my $i=0; $i <= $#{$fields}; $i++){
             if ($values->[$i] =~ /^\d+$/){
                 if ($Db_type eq "Pg"){
                     $create_str .= "$fields->[$i] integer,";
@@ -5642,7 +5642,7 @@ sub job_finishing_sequence($$$$$$){
             add_new_event($dbh,$e->{type},$job_id,$e->{string});
         }
     }
-    oar_Tools::notify_tcp_socket($almighty_host,$almighty_port,"ChState") if ($#{@{$events}} >= 0);
+    oar_Tools::notify_tcp_socket($almighty_host,$almighty_port,"ChState") if ($#{$events} >= 0);
 }
 
 
