@@ -41,6 +41,8 @@ upstream development version:
   - Bug #5518: add right initialization of the job user name.
   - Add new oaradmin command. This will permit to create resources and 
     manage admission rules more easily.
+  - Bug #5692: change source code into a right Perl 5.10 syntax.
+    (change "$#{@{$array}}" into "$#{$array}")
 
 version 2.2.12:
 ---------------
